--- a/Human Height-Weight.ipynb
+++ b/Human Height-Weight.ipynb
@@ -2738,8 +2738,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "id": "49af5c4d-416b-4592-8e47-c6e0b7a5ff0c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g=labelized.transform(['Male'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "id": "204a1c28-fb2d-4e58-a72a-384d83ba75f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "61.36"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "round(model.predict([[g,5]])[0],2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5601236e-a068-4ab8-91ae-8c7eea96f7f2",
    "metadata": {},
    "outputs": [],
    "source": []
