--- a/WEBSCRAPING.ipynb
+++ b/WEBSCRAPING.ipynb
@@ -373,7 +373,17 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'NoneType' object has no attribute 'find'\n",
+      "'NoneType' object has no attribute 'find'\n",
+      "'NoneType' object has no attribute 'find'\n"
+     ]
+    }
+   ],
    "source": [
     "phone=[]\n",
     "addressRg=[]\n",
@@ -898,6 +908,20 @@
     "\n",
     "\n",
     "(2:32 PM) https://mobiletekt100.constantcontactsites.com/\n",
+    "\n",
+    "https://pr.business/ugc_listings_2.xml\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "￼\n",
+    "Amit Kumar\n",
+    "(2:48 PM) https://business.cochawaii.org/list/\n",
+    "\n",
+    "\n",
+    "\n",
+    "(5:55 PM) https://pr.business/ugc_listings_2.xml\n",
     "\n"
    ]
   }
