--- a/WEBSCRAPING.ipynb
+++ b/WEBSCRAPING.ipynb
@@ -380,6 +380,10 @@
      "text": [
       "'NoneType' object has no attribute 'find'\n",
       "'NoneType' object has no attribute 'find'\n",
+      "'NoneType' object has no attribute 'find'\n",
+      "'NoneType' object has no attribute 'find'\n",
+      "'NoneType' object has no attribute 'find'\n",
+      "'NoneType' object has no attribute 'find'\n",
       "'NoneType' object has no attribute 'find'\n"
      ]
     }
@@ -922,7 +926,19 @@
     "\n",
     "\n",
     "(5:55 PM) https://pr.business/ugc_listings_2.xml\n",
-    "\n"
+    "\n",
+    "url=\"https://pr.business/ugc_listings_2.xml\"\n",
+    "url_link = requests.get(url)\n",
+    "file = BeautifulSoup(url_link.text, \"xml\")\n",
+    "link=[] \n",
+    "# # find all tables\n",
+    "# find_loc = file.find_all('loc', class_='numpy-table')\n",
+    "# rows = find_table.find_all('tr')\n",
+    " \n",
+    "# display tables\n",
+    "for i in file.find_all('loc'):\n",
+    "    \n",
+    "    link.append(i.text)"
    ]
   }
  ],
